--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
+        "livewire/livewire": "^2.8",
         "mcamara/laravel-localization": "^1.6",
         "spatie/laravel-translatable": "^5.0",
         "yoeunes/toastr": "^1.2"
